2013-09-17 Ezequiel Vázquez De la calle <ezequielvazq@gmail.com>
  * First release of swarm
