@@ -12,9 +12,14 @@ AM_SILENT_RULES([yes])
 AC_PROG_CXX
 
 # Checks for libraries.
-AC_CHECK_LIB([mysqlclient], [mysql_init], [], echo "ERROR: libmysqlclient not found" && exit 1)
-AC_CHECK_LIB([net], [libnet_init], [], echo "ERROR: libnet not found" && exit 1)
-AC_CHECK_LIB([pcap], [pcap_open_live], [], echo "ERROR: libpcap not found" && exit 1)
+AC_CHECK_LIB([mysqlclient], [mysql_init], [],
+    echo "ERROR: libmysqlclient not found" && exit 1)
+AC_CHECK_LIB([net], [libnet_init], [],
+    echo "ERROR: libnet not found" && exit 1)
+AC_CHECK_LIB([pcap], [pcap_open_live], [],
+    echo "ERROR: libpcap not found" && exit 1)
+AC_CHECK_LIB([config++], [config_init], [],
+    echo "ERROR: libconfig not found" && exit 1)
 
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h stdlib.h netinet/ether.h netinet/ip.h netinet/ip_icmp.h])
