@@ -1,0 +1,4 @@
+host = "localhost";
+username = "swarm";
+password = "swarm";
+database = "swarm";
